--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
   "name": "Archive",
-  "description": "Hide archive button in gmail !",
+  "description": "Hide gmail archive button !",
   "version": "1.0",
   "manifest_version": 3,
   "author": "manish baranwal",
