changed extension name

--- a/manifest.json
+++ b/manifest.json
@@ -1,5 +1,5 @@
 {
-  "name": "Archive",
+  "name": "Hide Gmail Archive",
   "description": "Hide gmail archive button !",
   "version": "1.0",
   "manifest_version": 3,
