--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
-  "name": "Hide Gmail Archive",
-  "description": "Hide gmail archive button !",
+  "name": "Hide Gmail Elements",
+  "description": "Hide gmail elements !",
   "version": "1.0",
   "manifest_version": 3,
   "author": "manish baranwal",
